Even more last minute bug issues.